# ptwebhookt

./: .conf.sh.swp  .gitignore  .gitmodules  Cargo.toml  README.md  conf.sh.example  templates.sh
rules/: info.sh
src/: main.rs
templates/: academy.toml  announcement.toml  project.toml
